refactor: arreglos generales